# kursovaya_modul3

./: README.md  pyproject.toml
script/: main_modul3.py  test_main_modul3.py
